k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-api
  namespace: coupon-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon-api
  template:
    metadata:
      labels:
        app: coupon-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: coupon-api
          image: ghcr.io/souluanf/coupon-api:latest
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 20
