k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coupon-api
  namespace: coupon-api
spec:
  selector:
    app: coupon-api
  ports:
    - port: 80
      targetPort: 8080
