k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coupon-api
  namespace: coupon-api
spec:
  ingressClassName: traefik
  rules:
    - host: ${APP_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coupon-api
                port:
                  number: 80
